# Bezier-Curves

./: CMakeLists.txt
Headers/: Utils.hpp
src/: ImGuiManager.cpp
src/ApplicationManager/: ApplicationManager.cpp
